# XLFormula-Engine

./: Cargo.toml  README.md
.github/workflows/: pr.yaml
src/: calculate.rs  grammar.pest  lib.rs  main.rs  parse_formula.rs  types.rs
src/calculate/: args.rs  display.rs  iterator.rs  mod.rs  reference.rs
src/calculate/operation/: boolean.rs  date.rs  function.rs  mod.rs  number.rs  string.rs
tests/: find.rs  iserror.rs  search.rs  test.rs
tests/common/: mod.rs
