[package]
authors = ["Jirada Herbst <jirada.herbst@data2impact.com>"]
description = "A tool to parse and evaluate Excel formulas"
edition = "2021"
homepage = "https://github.com/jiradaherbst/XLFormula-Engine"
keywords = ["formula", "parser", "excel", "pest"]
license = "MIT OR Apache-2.0"
name = "xlformula_engine"
readme = "README.md"
repository = "https://github.com/jiradaherbst/XLFormula-Engine"
version = "0.2.0"

[features]
default = ["f32"]
f32 = []
f64 = []

[dependencies]
chrono = { version = "0.4.41", default-features = false }
pest = "2.1.3"
pest_derive = "2.1.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
