[package]
authors = ["Jirada Herbst <jirada.herbst@data2impact.com>"]
description = "A tool to parse and evaluate Excel formulas"
edition = "2021"
homepage = "https://github.com/jiradaherbst/XLFormula-Engine"
keywords = ["formula", "parser", "excel", "pest"]
license = "MIT OR Apache-2.0"
name = "xlformula_engine"
readme = "README.md"
repository = "https://github.com/jiradaherbst/XLFormula-Engine"
version = "0.4.1"

[dependencies]
chrono = { version = "0.4.41", default-features = false }
strum = { version = "0.27.2", features = ["derive"] }
num-traits = "0.2.19"
pest = "2.8.1"
pest_derive = "2.8.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"
